--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -20,5 +20,13 @@
   <% end %>
 </p>
 
+<div>
+	<% if @brewery.ratings.empty? %>
+ 		Brewery's beers have no ratings yet!
+	<% else %>
+ 		Has <%= pluralize(@brewery.ratings.count, "rating") %>, average <%= @brewery.average_rating %>
+	<% end %>
+</div>
+
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
 <%= link_to 'Back', breweries_path %>
