--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -15,5 +15,13 @@
   <%= @beer.brewery_id %>
 </p>
 
+<div>
+	<% if @beer.ratings.empty? %>
+ 		beer has not yet been rated!
+	<% else %>
+ 		Has <%= pluralize(@beer.ratings.count, "rating") %>, average <%= @beer.average_rating %>
+	<% end %>
+</div>
+
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
 <%= link_to 'Back', beers_path %>
