--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -15,13 +15,19 @@
   <%= @beer_club.city %>
 </p>
 
-<div> Members: </div>
+<% if @beer_club.users.any? %>
+	<div> Members: </div>
 
-<ul>
- <% @users.each do |user| %>
-   <li> <%= user.username %> </li>
- <% end %>
-</ul>
+	<ul>
+	 <% @users.each do |user| %>
+	   <li> <%= user.username %> </li>
+	 <% end %>
+	</ul>
+<% else%>
+	<p>
+    No members
+  	</p>
+<% end %>
 
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
 <%= link_to 'Back', beer_clubs_path %>
