--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -15,8 +15,8 @@
       <tr>
         <td><%= link_to brewery.name, brewery %></td>
         <td><%= brewery.year %></td>
-        <td><%= link_to 'Edit', edit_brewery_path(brewery) %></td>
-        <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to('Edit', edit_brewery_path(brewery)) if current_user %></td>
+        <td><%= link_to('Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,6 +24,6 @@
 
 <br>
 
-<%= link_to 'New Brewery', new_brewery_path %>
+<%= link_to('New Brewery', new_brewery_path) if current_user %>
 
 <div><%= link_to 'List of beers', beers_path %></div>
