--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing beers</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -16,8 +16,8 @@
         <td><%= link_to beer.name, beer %></td>
         <td><%= beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
-        <td><%= link_to('Edit', edit_beer_path(beer)) if current_user %></td>
-        <td><%= link_to('Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %></td>
+        <td><%= link_to('Edit', edit_beer_path(beer), class:'btn btn-info') if current_user %></td>
+        <td><%= link_to('Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger') if current_user %></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,6 +25,6 @@
 
 <br>
 
-<%= link_to('New Beer', new_beer_path) if current_user %>
+<%= link_to('New Beer', new_beer_path, class:'btn btn-info') if current_user %>
 
-<div><%= link_to 'List of breweries', breweries_path %></div>
+<div><%= link_to 'List of breweries', breweries_path, class:'btn btn-default' %></div>
