--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,29 +1,19 @@
-<h1>Listing breweries</h1>
-  <p> Number of breweries: <%= @breweries.count %> </p>
+<h1>Breweries</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Year</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<h2>Active breweries</h2>
 
-  <tbody>
-    <% @breweries.each do |brewery| %>
-      <tr>
-        <td><%= link_to brewery.name, brewery %></td>
-        <td><%= brewery.year %></td>
-        <td><%= link_to('Edit', edit_brewery_path(brewery)) if current_user %></td>
-        <td><%= link_to('Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<p> Number of active breweries: <%= @active_breweries.count %> </p>
+
+<%= render 'list', breweries: @active_breweries %>
+
+<h2>Retired breweries</h2>
+
+<p> Number of retired breweries: <%= @retired_breweries.count %> </p>
+
+<%= render 'list', breweries: @retired_breweries %>
 
 <br>
 
-<%= link_to('New Brewery', new_brewery_path) if current_user %>
+<%= link_to('New Brewery', new_brewery_path, class:'btn btn-info') if current_user %>
 
-<div><%= link_to 'List of beers', beers_path %></div>
+<div><%= link_to 'List of beers', beers_path, class:'btn btn-default' %></div>
