--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -2,6 +2,9 @@
 
 <h2>
   <%= @brewery.name %>
+  <% if not @brewery.active  %>
+      <span class="label label-info">retired</span>
+  <% end %>
 </h2>
 
 <p>
@@ -28,5 +31,10 @@
 	<% end %>
 </div>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
-<%= link_to 'Back', breweries_path %>
+<% if current_user %>
+  <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
+<% end %>
+
+<%= edit_and_destroy_buttons(@brewery) %>
+
+<div><%= link_to 'Back', breweries_path %></div>
