--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,11 +1,24 @@
-<h2>List of ratings</h2>
+<h1>Rating statistics</h1>
 
 <p>Number of ratings: <%= @ratings.count %></p>
 
+<h2>Best beers</h2>
+
+<%= render 'list', best: Beer.top(3) %>
+
+<h2>Best breweries</h2>
+
+<%= render 'list', best: Brewery.top(3) %>
+
+<h2>Best styles</h2>
+
+<%= render 'list', best: Style.top(3) %>
+
+<h2>Recent ratings</h2>
 <ul>
- <% @ratings.each do |rating| %>
-   <li> <%= rating %> <%= link_to rating.user.username, rating.user %> </li>
+ <% @ratings.recent.each do |rating| %>
+   <li><%= rating %> <%= link_to rating.user.username, rating.user %></li>
  <% end %>
 </ul>
 
-<%= link_to('New Rating', new_rating_path) if current_user %>
+<%= link_to('New Rating', new_rating_path, class:'btn btn-info') if current_user %>
