--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,1 +1,29 @@
-<h1>Styles</h1>
+<p id="notice"><%= notice %></p>
+
+<h1>Listing Styles</h1>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th colspan="1"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @styles.each do |style| %>
+      <tr>
+        <td><%= link_to style.name, style %></td>
+        <td><%= style.description %></td>
+        <td><%= link_to('Destroy', style, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger') if current_user %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<% if current_user %>
+ <%= link_to 'New Style', new_style_path, class:'btn btn-info' %>
+<% end %>
