--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing users</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Username</th>
@@ -12,7 +12,10 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.username %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Show', user, class:'btn btn-success' %></td>
+        <% if current_user and current_user.admin and user.active == false %>
+        <td><span class="label label-danger">Banned</span></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -20,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, class:'btn btn-info' %>
