--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,12 +1,23 @@
-<h1>Listing beers</h1>
+<h1>Beers</h1>
+
+<div style="border-style: solid;">
+  beerlist-name: <%= ActionController::Base.new.fragment_exist?( 'beerlist-name' ) %>
+  <br>
+  beerlist-style: <%= ActionController::Base.new.fragment_exist?( 'beerlist-style' ) %>
+  <br>
+  beerlist-brewery: <%= ActionController::Base.new.fragment_exist?( 'beerlist-brewery' ) %>
+  <br>
+  current: <%= "beerlist-#{@order}" %>
+</div>
+
+<% cache "beerlist-#{@order}", skip_digest: true do %>
 
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Style</th>
-      <th>Brewery</th>
-      <th colspan="3"></th>
+      <th> <%= link_to 'Name', beers_path(order:"name") %> </th>
+      <th> <%= link_to 'Style', beers_path(order:"style") %> </th>
+      <th> <%= link_to 'Brewery', beers_path(order:"brewery") %> </th>
     </tr>
   </thead>
 
@@ -14,14 +25,14 @@
     <% @beers.each do |beer| %>
       <tr>
         <td><%= link_to beer.name, beer %></td>
-        <td><%= beer.style %></td>
+        <td><%= link_to beer.style, beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
-        <td><%= link_to('Edit', edit_beer_path(beer), class:'btn btn-info') if current_user %></td>
-        <td><%= link_to('Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger') if current_user %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<% end %>
 
 <br>
 
