--- a/app/views/breweries/_list.html.erb
+++ b/app/views/breweries/_list.html.erb
@@ -1,20 +1,19 @@
-<table class="table table-hover">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Year</th>
-  </tr>
-  </thead>
 
-  <tbody>
-  <% breweries.each do |brewery| %>
-      <tr>
-        <td><%= link_to brewery.name, brewery %></td>
-        <td><%= brewery.year %></td>
-        <td><%= link_to('Edit', edit_brewery_path(brewery), class:'btn btn-info') if current_user %></td>
-        <td><%= link_to('Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger') if current_user %></td>
-        <td></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
+  <table class="table table-hover">
+    <thead>
+    <tr>
+      <th><%= link_to 'Name', breweries_path(order:"name") %></th>
+      <th><%= link_to 'Year', breweries_path(order:"year") %></th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <% breweries.each do |brewery| %>
+        <tr>
+          <td><%= link_to brewery.name, brewery %></td>
+          <td><%= brewery.year %></td>
+          <td></td>
+        </tr>
+    <% end %>
+    </tbody>
+  </table>
