--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Breweries</h1>
 
+<% cache "brewerylist-#{@order}", skip_digest: true do %>
 <h2>Active breweries</h2>
 
 <p> Number of active breweries: <%= @active_breweries.count %> </p>
@@ -11,6 +12,7 @@
 <p> Number of retired breweries: <%= @retired_breweries.count %> </p>
 
 <%= render 'list', breweries: @retired_breweries %>
+<% end %>
 
 <br>
 
