--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= cache @brewery do %>
 
 <h2>
   <%= @brewery.name %>
@@ -27,9 +27,11 @@
 	<% if @brewery.ratings.empty? %>
  		Brewery's beers have no ratings yet!
 	<% else %>
- 		Has <%= pluralize(@brewery.ratings.count, "rating") %>, average <%= @brewery.average_rating %>
+ 		Has <%= pluralize(@brewery.ratings.count, "rating") %>, average <%= round(@brewery.average_rating) %>
 	<% end %>
 </div>
+
+<% end %>
 
 <% if current_user %>
   <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
