--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,18 +1,43 @@
 <h1>Rating statistics</h1>
 
+<% cache 'ratinglist', skip_digest: true do %>
+
 <p>Number of ratings: <%= @ratings.count %></p>
 
 <h2>Best beers</h2>
-
 <%= render 'list', best: Beer.top(3) %>
 
 <h2>Best breweries</h2>
-
 <%= render 'list', best: Brewery.top(3) %>
 
 <h2>Best styles</h2>
-
 <%= render 'list', best: Style.top(3) %>
+
+<h2>Most active users</h2>
+
+<table class="table table-hover table-condensed">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>favorite beer</th>
+      <th>favorite brewery</th>
+      <th>preferred style</th>
+      <th>ratings</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= link_to user.username, user %></td>
+        <td><%= link_to user.favorite_beer.name, user.favorite_beer %></td>
+        <td><%= link_to user.favorite_brewery.name, user.favorite_brewery %></td>
+        <td><%= link_to user.favorite_style.name, user.favorite_style %></td>
+        <td><%= user.ratings.count %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <h2>Recent ratings</h2>
 <ul>
@@ -20,5 +45,6 @@
    <li><%= rating %> <%= link_to rating.user.username, rating.user %></li>
  <% end %>
 </ul>
+<% end %>
 
 <%= link_to('New Rating', new_rating_path, class:'btn btn-info') if current_user %>
