--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,25 @@
-<h1>Listing users</h1>
+<h1>Users</h1>
 
 <table class="table table-hover">
   <thead>
     <tr>
       <th>Username</th>
-      <th colspan="3"></th>
+      <th> rated beers </th>
+      <th> total ratings </th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
-        <td><%= link_to 'Show', user, class:'btn btn-success' %></td>
-        <% if current_user and current_user.admin and user.active == false %>
-        <td><span class="label label-danger">Banned</span></td>
+        <td><%= link_to user.username, user %></td>
+        <td><%= user.beers.size %></td>
+        <td><%= user.beers.size %></td>
+        <td>
+          <% if current_user and current_user.admin and user.active == false %>
+          <span class="label label-danger">Account frozen</span>
+        </td>
         <% end %>
       </tr>
     <% end %>
